2007-01-19  Sven Neumann  <sven@gimp.org>

	* INSTALL
	* configure.in: check for D-Bus GLib bindings.

	* app/Makefile.am
	* app/main.c: check if an interactive GIMP instance proposes
	itself on the D-Bus and delegate to it. Allow this behaviour to be
	overridden by using the --new-instance command-line option.

	* app/widgets/Makefile.am
	* app/widgets/gimpdbusservice.[ch]
	* app/widgets/dbus-service.xml: added an object that offers a
	D-Bus service.

	* app/gui/Makefile.am
	* app/gui/gui.c: connect to the D-Bus and export the GimpDBusService.

2007-01-19  Sven Neumann  <sven@gimp.org>

	* app/file/file-utils.[ch]: let the filename -> uri functions take
	a Gimp parameter instead of the list of load procedures.

	* app/core/gimpimage.c
	* app/app_procs.c
	* app/dialogs/file-open-location-dialog.c
	* tools/pdbgen/pdb/fileops.pdb: changed accordingly.

	* app/pdb/fileops_cmds.c: regenerated.

2007-01-19  Sven Neumann  <sven@gimp.org>

	* app/app_procs.c
	* app/file/file-utils.[ch]: moved code from app_procs.c to file-utils.

2007-01-19  Raphaël Quinet  <raphael@gimp.org>

	* app/tools/gimpiscissorstool.[ch]: Added some status bar messages.
	Use ISCISSORS_OP_CONNECT to let the user know when the cursor is
	above the first point and the user can connect and close the
	curve.  Allow the user to press Enter or Escape to confirm the
	selection or cancel the tool.  Fixes bug #398309.

2007-01-18  Michael Natterer  <mitch@gimp.org>

	* app/pdb/color_cmds.c: regenerated.

2007-01-18  Kevin Cozens  <kcozens@cvs.gnome.org>

	* tools/pdbgen/pdb/color.pdb: allow low value to be equal to the high
	value for PDB call to gimp-threshold. From a patch by Dave Gowers.
	Fixes bug #397903.

2007-01-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/curve_bend.c (bender_type_callback): check data
	before accessing it to avoid crashing while the dialog is being
	constructed. Fixes bug #395798.

2007-01-16  Sven Neumann  <sven@gimp.org>
